[gd_scene load_steps=6 format=3 uid="uid://bhtl7dl2btdqv"]

[ext_resource type="Texture2D" uid="uid://hqyv268tpckm" path="res://assets/pipe-green.png" id="1_a6swv"]
[ext_resource type="Script" path="res://scenes/pipe_pair.gd" id="1_cy7ip"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3xcve"]
size = Vector2(45, 478)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7qa0r"]
size = Vector2(45, 479)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_58co8"]
size = Vector2(11, 127)

[node name="PipePair" type="Node2D"]
script = ExtResource("1_cy7ip")

[node name="TopPipe" type="Area2D" parent="."]
position = Vector2(0, -300)

[node name="Sprite2D" type="Sprite2D" parent="TopPipe"]
rotation = 3.14159
texture = ExtResource("1_a6swv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopPipe"]
shape = SubResource("RectangleShape2D_3xcve")

[node name="BottomPipe" type="Area2D" parent="."]
position = Vector2(0, 300)

[node name="Sprite2D" type="Sprite2D" parent="BottomPipe"]
texture = ExtResource("1_a6swv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomPipe"]
shape = SubResource("RectangleShape2D_7qa0r")

[node name="Scored" type="Area2D" parent="."]
position = Vector2(38, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Scored"]
shape = SubResource("RectangleShape2D_58co8")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="body_entered" from="TopPipe" to="." method="_on_body_entered"]
[connection signal="body_entered" from="BottomPipe" to="." method="_on_body_entered"]
[connection signal="body_entered" from="Scored" to="." method="_on_point_scored"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
